--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
             <url>https://repo.maven.apache.org/maven2</url>
         </repository>
     </repositories>
+
     <build>
         <plugins>
             <plugin>
@@ -44,12 +45,16 @@
                         </goals>
                         <configuration>
                             <transformers>
+                                <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>your.main.Class</mainClass> <!-- Replace with your main class -->
+                                    <mainClass>org.perudo.Main</mainClass>
                                 </transformer>
                             </transformers>
                             <artifactSet>
                                 <includes>
+                                    <include>org.apache.logging.log4j:log4j-core</include>
+                                    <include>org.apache.logging.log4j:log4j-api</include>
+                                    <include>org.apache.logging.log4j:log4j-jpl</include>
                                     <include>com.mysql:mysql-connector-j</include>
                                     <include>com.google.code.gson:gson</include>
                                     <include>de.mkammerer:argon2-jvm</include>
@@ -76,11 +81,29 @@
             <artifactId>gson</artifactId>
             <version>2.10.1</version>
         </dependency>
-        <!-- Argon2 dependency -->
+        <!-- https://central.sonatype.com/artifact/de.mkammerer/argon2-jvm -->
         <dependency>
             <groupId>de.mkammerer</groupId>
             <artifactId>argon2-jvm</artifactId>
             <version>2.11</version>
+        </dependency>
+        <!-- https://central.sonatype.com/artifact/org.apache.logging.log4j/log4j-api -->
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-api</artifactId>
+            <version>3.0.0-beta1</version>
+        </dependency>
+        <!-- https://central.sonatype.com/artifact/org.apache.logging.log4j/log4j-core -->
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+            <version>3.0.0-beta1</version>
+        </dependency>
+        <!-- https://central.sonatype.com/artifact/org.apache.logging.log4j/log4j-jpl -->
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-jpl</artifactId>
+            <version>3.0.0-beta1</version>
         </dependency>
     </dependencies>
 </project>
